# MultiAgents-TravelPlanner

./: .gitignore  README.md  llm_config.py  pyproject.toml  requirements.txt  travel_agent.py  travel_app.py  utils_export.py
agents/: chat_agent.py  conditional_tavily_search.py  fetch_useful_links.py  food_culture_recommender.py  generate_itinerary.py  hotel_search.py  packing_list_generator.py  rag_chat_agent.py  recommend_activities.py  vietnam_travel_context.py  weather_forecaster.py
configs/: project_config.yml  tools_config.yml
data/stories_vectordb/: chroma.sqlite3
data/unstructured_docs/vietnam_travel/: food_culture.txt  hidden_gems.txt  local_insights.txt  practical_tips.txt
src/: create_vector_db.py
src/agent_graph/: __init__.py  build_full_graph.py  load_tools_config.py  tool_stories_rag.py  tool_vietnam_travel_rag.py
src/chatbot/: backend.py  frontend.py  load_config.py
tests/: test_travel_defense.py  test_workflow.py
